RESOLVED FIXED121663
Atomics.h does not build on MinGW
https://bugs.webkit.org/show_bug.cgi?id=121663
Summary Atomics.h does not build on MinGW
Allan Sandfeld Jensen
Reported 2013-09-20 02:22:17 PDT
MinGW does not have _ReadWriteBarrier() intrinsic, but does have GCC inline assembler, so use the GCC definitions instead of MSVC ones.
Attachments
Patch (1.51 KB, patch)
2013-09-20 02:23 PDT, Allan Sandfeld Jensen
no flags
Allan Sandfeld Jensen
Comment 1 2013-09-20 02:23:11 PDT
WebKit Commit Bot
Comment 2 2013-09-20 09:44:37 PDT
Comment on attachment 212135 [details] Patch Clearing flags on attachment: 212135 Committed r156170: <http://trac.webkit.org/changeset/156170>
WebKit Commit Bot
Comment 3 2013-09-20 09:44:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.