Atomics.h does not build on MinGW https://bugs.webkit.org/show_bug.cgi?id=121663

Reviewed by Darin Adler.

MinGW does not have _ReadWriteBarrier() intrinsic, but does have GCC
inline assembler, so use the GCC definitions instead of MSVC ones.

* wtf/Atomics.h:
(WTF::compilerFence):


Canonical link: https://commits.webkit.org/139685@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156170 268f45cc-cd09-0410-ab3c-d52691b4dbfc